remove old application launcher UI